# Artiview

./: .gitignore  LICENSE  README.ko.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.tsx  api.ts  find.ts  foldertree.ts  hooks.ts  i18n.ts  main.tsx  markdown.ts  settings.ts  styles.css  theme.ts  types.ts  util.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  html.rs  lib.rs  main.rs  pdf.rs  remote.rs  watch.rs
src/components/: FileCard.tsx  FileGrid.tsx  ForgetButton.tsx  PasswordModal.tsx  RemoteFolderModal.tsx  SettingsModal.tsx  Sidebar.tsx  TagEditor.tsx  Toolbar.tsx  Viewer.tsx
