[package]
name = "artiview"
version = "0.2.0"
description = "Artiview — a viewer & manager for agent-generated HTML & Markdown files"
authors = ["Gitake Kwon <kwongitack@gmail.com>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "artiview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
# Auto-refresh: native file watching (FSEvents/inotify) over registered folders.
notify = "8"
# Remote (SSH/SFTP) folder support. vendored-openssl keeps builds hermetic.
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
ssh2-config = "0.5"
percent-encoding = "2.3"

